[package]
name = "ecc608-linux-swi"
version = "0.2.0-dev"
authors = ["Marc Nijdam <marc@helium.com>", "Peter Heckel <pheckel@tektelic.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for accessing the ECC608 chip on Linux using the Single wire interface. Forked from https://github.com/helium/ecc608-linux-rs"
repository = "https://github.com/tektelic/ecc608-linux-swi-rs"
readme = "README.md"

[dependencies]
serialport = {version = "4", default-features = false }
sha2 = "0"
bytes = "1"
bitfield = "0"
serde = "1"
serde_derive = "1"
thiserror = "1"
