[package]
name = "ecc608-linux"
version = "0.1.3-dev"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for accessing the ECC608 chip on Linux"
repository = "https://github.com/helium/ecc608-linux-rs"
readme = "README.md"

[dependencies]
i2c-linux = {version = "0" }
serialport = {version = "4", default-features = false }
sha2 = "0"
bytes = "1"
bitfield = "0"
serde = "1"
serde_derive = "1"
thiserror = "1"
